# serpent

./: .gitignore  GENERAL.java  MANIFEST.in  Makefile  PLATFORM.java  README.md  bugs.txt  main.py  pyproject.toml  setup.py  test.e  test.java
com/eiffel/: PLATFORM.java
examples/access_control/: app.e
examples/array_utils/: app.e  quick_sorter.e
examples/cmdargs/: app.e
examples/diamond/: app.e  base.e  derived1.e  derived2.e  diamond.e
examples/factorial/: app.e
examples/fib/: app.e
examples/files/: app.e
examples/hash_table_example/: app.e
examples/hello/: app.e
examples/logical_dynamic/: app.e
examples/logical_static/: app.e
examples/mixed_integer_real_expr/: app.e
examples/reference/: app.e
examples/web_server/: app.e
rtl/: PLATFORM.java
serpent/: build.py  cmd.py  errors.py  parser_adapter.py
serpent/codegen/: byte_utils.py  bytecode.py  bytecommand.py  class_file.py  constant_pool.py  constpool.py  genbytecode.py  general_class.py  preprocess.py  tables.py
serpent/parser/: Makefile  ast.c  eiffel.flex  eiffel.y  json.c  lex_utils.c
serpent/parser/include/: ast.h
serpent/resources/: __init__.py
serpent/resources/rtl/: PLATFORM.java  PreconditionFailedException.java
serpent/resources/stdlib/: any.e  arguments.e  array.e  array_sorter.e  boolean.e  character.e  comparable.e  eq.e  (+14 more)
serpent/semantic_checker/: analyze_inheritance.py  constant_pool.py  symtab.py  type_check.py  typed_tree.py  utils.py
serpent/tree/: class_decl.py  expr.py  features.py  stmts.py  type_decl.py
stdlib/: boolean.e  integer.e  none.e  string.e
(+2 files in other folders)
